complete bean definition study

--- a/spring/ioc-container-bean/pom.xml
+++ b/spring/ioc-container-bean/pom.xml
@@ -24,5 +24,11 @@
             <artifactId>ioc-container-overview</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
